frontend/public/assets/style/style.css
@font-face{
	font-family: KaTeX_Main;
	src: url('../lib/katex/fonts/KaTeX_Main-Regular.woff2') format('woff');
	font-weight: 400;
	font-style: normal;
}

main {
	font-family: Katex_Main, serif;
}

.katex {
	font-size: 1.1em;
}

.centered-text {
	margin: auto;
	text-align: center;
}

#intro-window, #ending-window {
	text-align: center;
}

#reset-button {
	margin: auto;
}

#start-button {
	margin-left: auto;
	margin-right: auto;
}

#title {
	font-size: 2.4em;
	margin-top: 5px;
	margin-bottom: 15px;
}

#subtitle {
	font-size: 1.4em;
}

#hint-text {
	width: fit-content;
	width: -moz-fit-content;
	text-align: left;
	margin-left: auto;
	margin-right: auto;
}

#hint-list {
	padding-inline-start: 30px;
	margin-top: 6px;
}

#hint-list li {
	margin-top: 7px;
}

.latex-button {
	font-family: Katex_Main, serif;
	font-size: 1em;
	background-color: white;
	border: solid 2px black;
	padding: 10px;
	margin-left: 5px;
	margin-right: 5px;
}

.latex-button:hover {
	cursor: pointer;
	background-color: #eee;
}

.latex-button:focus {
	outline: none;
	background-color: #eee;
}

.latex-button:active {
	outline: none;
	background-color: #ccc;
}

/* @dev needs to be used in conjunction (override) LaTeX button CSS class (.latex-button) */
.latex-input { 
	padding: 5px;
}

/* @dev needs to be used in conjunction (override) LaTeX button CSS class (.latex-button) */
.latex-smaller-input { 
	padding: 2px;
}


#left-buttons {
	float: left;
	display: flex;
}

#skip-button {
}

#toggle-music-wrapper {
	display: flex;
	padding: 1px;
}

#toggle-music {
	width: 35px;
	cursor: pointer;
}

#shuffle-music-wrapper {
	display: flex;
	justify-content: center;
	padding: 7px;
}

#shuffle-music {
	width: 25px;
	cursor: pointer;
}

.important-numbers {
	display: grid; 
	grid-template-columns: max-content max-content; 
	grid-template-rows: 1fr 1fr; 
}

#top-row {
	display: flex;
	justify-content: space-between; /* Align items at opposite ends */
	align-items: center; /* Align items vertically in the center */
}

#score-wrapper {
}

#timer-wrapper {
	text-align: right;
}

#score {
	text-align: center;
	font-family: KaTeX_Main, serif;
}

#timer {
	font-family: KaTeX_Main, serif;
}

.latex {
	height: 100px;
	margin-left: auto;
	margin-right: auto;
	border: solid 2px black;
	display: flex;
	justify-content: center;
	flex-direction: column;
	overflow-x: auto;
	padding-left: 10px;
	padding-right: 10px;
}

.correct {
	border-color: #0d0;
}

.done {
	color: #d00;
}

#target {
	margin-left: auto;
	margin-right: auto;
}

@media only screen and (max-width : 992px) {
	#container {
		width: 85%;
		margin-left: auto;
		margin-right: auto;
	}
}

#container {
	width: 70%;
	margin-top: 50px;
	margin-left: auto;
	margin-right: auto;
	display: none;
}

#out {
	margin-left: auto;
	margin-right: auto;
}

#user-input {
	height: 100px;
}

.answer {
	user-select: none;
	text-align: left;
	padding: 2px;
}

.latex-source {
	font-family: 'Roboto Mono', monospace;
	resize: none;
	background-color: black;
	font-size: 20px;
	color: white;
	width: 100%;
}

.centered-list td {
	text-align: center;	
}  

#result {
	height: 20px;
}

.problem-header {
	font-size: 1.5em;
}

.title {
	font-weight: bold;
}

.out-container {
  position: relative;
}
#shadow-target {
	opacity: 1;
	z-index: 0;
	color: #ccc;
	display: none;
}
.latex.out {
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
}
.latex {
	box-sizing: border-box;
}

#toggle-shadow-desc {
	display: inline;
	margin-left: 10px;
	margin-top: auto;
	margin-bottom: auto;
}

#options-container {
	display: flex;
	align-items: center;
}

.checkbox {
	display: none;
}

label {
	display: inline;
}

.checkbox + label, .checkbox:checked + label {
	background-color: white;
	border: 2px solid black;
	padding: 8px;
	display: inline-block;
	position: relative;
}

.checkbox + label:active, .checkbox:checked + label:active {
	background-color: #eee;
}

.checkbox + label:focus, .checkbox:checked + label:focus {
	background-color: #eee;
	outline: 0;
}

.checkbox:checked + label:after {
	content: '\2714';
	font-size: 14px;
	position: absolute;
	top: 0px;
	left: 3px;
	color: black;
}

#skipped-problems {
	display: none;
}

#lobby-screen {
	border: 2px solid black;
	height: 400px;
	display: flex;
}

#lobby-user-manager {
	flex-grow: 1;
	display: flex;
	flex-direction: column;
}

#lobby-user-list::-webkit-scrollbar {
	display: none;
}

#lobby-user-list {
	overflow-y: scroll;
	flex-grow: 1;
	-ms-overflow-style: none;
	scrollbar-width: none;
}

#lobby-people {
	display: flex;
	flex-basis: 0;
}

.lobby-person {
	margin: 5px;
}

#lobby-manager {
	flex-grow: 1;
	display: flex;
	flex-direction: column;
	border-left: 1px solid black;
}

#lobby-settings {
	flex-grow: 1;
	display: flex;
	flex-direction: column;
	padding: 10px;
}

#start-multiplayer-button {
	margin: 8px;
}

.setting {
	display: flex;
	flex-direction: row;
	flex: 0 0 auto;
}

.setting-key {
	flex: 1 1 0;
	display: flex;
	align-items: center;
}

.setting-value {
	flex: 0 0 45%;
}

#lobby-settings-button {
	float:  left;
	margin-top: 8px;
	margin-left: 0;
}

